improve: Rewrite code using `rewrite-maven-plugin`